fixed unicode issue

--- a/default/app.conf
+++ b/default/app.conf
@@ -12,6 +12,6 @@ is_visible = 0
 label = s4g-fec_ta
 
 [launcher]
-author=Splunk4Good
-description=FEC API
+author= 
+description= A Modular input to crawl data from the FEC API.
 version = 1.0
